--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,1 +1,52 @@
-<h1>fbClone // <%= title %></h1>
+
+<h1>fbclone // <%= title %></h1>
+
+<section id="feed-posts">
+    <h4>Posts</h4>
+    <% if (locals.user){ %>
+    <form action="/posts/create" method="post">
+        <textarea name="content" id="" cols="30" rows="3" placeholder="How you feeling this evening"></textarea>
+        <input type="submit" value="Post">
+    </form>
+    <% } %>
+</section>
+
+<div class="posts-list-container">
+    <ul>
+            
+        <% for (post of posts) { %>
+        <li>
+            <p>
+                <a href="/posts/destroy/<%= post._id %>"><i class="fa fa-trash" style="font-size:20px;"></i></a>
+                <%= post.content %>
+                <br>
+                <small>
+                 
+                </small>
+            </p>
+            <% if (locals.user){ %>
+            <form action="/comments/create" method="post">
+                <input type="text" name="content" placeholder="">
+                <input type="hidden" name="post" value="<%= post._id %>">
+                <input type="submit"  value="Comment">
+            </form>
+            <% } %>
+            <div class="post-comments-list">
+                <ul>
+                    <li>
+                        <% for (comment of post.comments) { %>
+                            <p>
+                                <%= comment.content %>
+                                <br>
+                <small>
+                    <%= comment.user.name %>      
+                </small>
+                            </p>
+                            <% } %>        
+                    </li>
+                </ul>
+            </div>
+        </li>
+        <%  } %>
+    </ul>
+</div>
