--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,7 +1,18 @@
+<link rel="stylesheet" href="/css/user_profile.css">
+
 <h1>
     fb / Profile Page
 </h1>
 
-<h2><%= user.name %></h2>
-<h2><%= user.email %></h2>
-<h2><%= user.password %></h2>
+
+<% if(user.id == profile_user.id){ %>
+    <form action="/users/update/<%= profile_user.id %>" method="post">
+        <input type="text" name="name" placeholder="Your Name" value="<%= profile_user.name %>" required>
+        <input type="email" name="email" placeholder="Your Email" value="<%= profile_user.email %>" required>
+        <input type="Submit"  value="Update">    
+    </form>
+<% }else{%>
+    <h2><%= profile_user.name %></h2>
+    <h3><%= profile_user.email %></h3>
+    
+<% }%>
