--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,13 +1,16 @@
-<header>
+<header id="layout-header">
   FB //header
-</header>
+
+<div class="auth-links"></div>
 
 <ul>
   <% if (locals.user){ %>
-      <li><a href="/users/profile">profile</a></li>
+      <li><a href="/users/profile/<%= user.id %>">profile  </a><h1><%= user.name %></h1></li>
       <li><a href="/users/logout">logout</a></li>
   <% }else{ %>
   <li><a href="/users/sign-up">signup</a></li>
   <li><a href="/users/sign-in">signin</a></li>
 <% } %>
 </ul>
+</div>
+</header>
