--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,8 @@
 
-<h1>fbclone // <%= title %></h1>
+<link rel="stylesheet" href="/css/home.css">
 
+<h1>fbclone // <%= title %></h1>
+<div id="home-container">
 <section id="feed-posts">
     <h4>Posts</h4>
     <% if (locals.user){ %>
@@ -14,39 +16,20 @@
 <div class="posts-list-container">
     <ul>
             
-        <% for (post of posts) { %>
-        <li>
-            <p>
-                <a href="/posts/destroy/<%= post._id %>"><i class="fa fa-trash" style="font-size:20px;"></i></a>
-                <%= post.content %>
-                <br>
-                <small>
-                 
-                </small>
-            </p>
-            <% if (locals.user){ %>
-            <form action="/comments/create" method="post">
-                <input type="text" name="content" placeholder="">
-                <input type="hidden" name="post" value="<%= post._id %>">
-                <input type="submit"  value="Comment">
-            </form>
-            <% } %>
-            <div class="post-comments-list">
-                <ul>
-                    <li>
-                        <% for (comment of post.comments) { %>
-                            <p>
-                                <%= comment.content %>
-                                <br>
-                <small>
-                    <%= comment.user.name %>      
-                </small>
-                            </p>
-                            <% } %>        
-                    </li>
-                </ul>
-            </div>
-        </li>
+        <% for ( post of posts) { %>
+            <%- include('_post'); %>
         <%  } %>
     </ul>
+</div>
+
+<section id="user-friends">
+    <h4>Friends</h4>
+          
+    <% for (i of all_users) { %>
+        <p>
+            <a href="/users/profile/<%= i.id %>"><%= i.name %> </br></a>
+        </p>
+        
+    <%  } %>
+</section>
 </div>
